@@ -48,6 +48,11 @@ class Translations extends TranslationCollection
         'message_warning_strategies_failed' => 'Door een fout in uw instellingen of btw tarieven, konden niet alle fatuurregels correct gecompleteerd worden. Daarom is de factuur als concept opgeslagen. Corrigeer de factuur in Acumulus.',
         'message_warning_multiple_vattype_must_split' => 'De factuur heeft meerdere factuurtypes (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. Splits de factuur in Acumulus en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
         'message_warning_multiple_vattype_may_split' => 'De factuur kan meerdere factuurtypes hebben (https://wiki.acumulus.nl/index.php?page=127). Daarom is de factuur als concept opgeslagen. Controleer het btw type van de factuur in Acumulus en corrigeer deze indien nodig, of splits de factuur en verdeel de regels over beide facturen gebaseerd op het btw type waar de regel onder valt.',
+        'message_warning_missing_amount_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
+        'message_warning_missing_amount_not_added' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
+        'amount_ex' => 'bedrag (ex. btw)',
+        'amount_inc' => 'bedrag (incl. btw)',
+        'amount_vat' => 'btw-bedrag',
         'message_warning_no_pdf' => 'Vanwege deze waarschuwing is er ook geen PDF factuur naar de klant verstuurd. U dient dit handmatig alsnog te doen.',
         'message_warning_old_entry_deleted' => 'De factuur heeft een oudere boeking voor deze %1$s in Acumulus overschreven. Deze oudere boeking met boeknummer %2$d is in Acumulus naar de prullenbak verplaatst en is daar nu terug te vinden onder "Overzichten » Laatste boekingen » Verwijderde boekingen".',
         'message_warning_old_entry_not_deleted' => 'De factuur heeft een oudere boeking voor deze %1$s in Acumulus overschreven. We hebben geprobeerd deze oudere boeking met boeknummer %2$d in Acumulus naar de prullenbak te verplaatsen, maar dit is niet gelukt omdat de oude factuur waarschijnlijk al verwijderd was. Deze oude factuur kan misschien nog steeds teruggevonden worden onder "Overzichten » Laatste boekingen » Verwijderde boekingen".',
@@ -92,6 +97,14 @@ class Translations extends TranslationCollection
         'message_warning_strategies_failed' => 'Due to an error in your settings or VAT rates, we could not complete all invoice lines correctly. The invoice has been saved as concept. Correct the invoice in Acumulus.',
         'message_warning_multiple_vattype_must_split' => 'The invoice has multiple invoice types (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Split the invoice in Acumulus and divide the invoice lines over both invoices based on the VAT type the line belongs to.',
         'message_warning_multiple_vattype_may_split' => 'The invoice can have multiple invoice types (https://wiki.acumulus.nl/index.php?page=127). The invoice has been saved as concept. Check the VAT type of the invoice in Acumulus and correct if necessary, or split the invoice and divide the invoice lines over both invoices based on the VAT type the line belongs to.',
+        'message_warning_missing_amount_adde1' => 'Het factuurbedrag klopt niet met het totaal van de regels. Daarom is er een correctieregel toegevoegd met een bedrag (ex. btw) van €%1$.2f en een btw bedrag van €%2$.2f. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
+        'message_warning_missing_amount_not_adde1' => 'Het factuurbedrag klopt niet met het totaal van de regels. Het %1$s wijkt €%2$.2f af. De factuur is als concept opgeslagen. Controleer en corrigeer de factuur in Acumulus.',
+        'message_warning_missing_amount_added' => 'The invoice total does not match with the lines total. Therefore a corrective line was added with an amount (ex. vat) of €%1$.2f and a vat amount of €%2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
+        'message_warning_missing_amount_not_added' => 'The invoice total does not match with the lines total. The %1$s differs with €2$.2f. The invoice has been saved as concept. Check and correct the invoice in Acumulus.',
+        'amount_ex' => 'amount (ex. vat)',
+        'amount_inc' => 'amount (inc. vat)',
+        'amount_vat' => 'vat amount',
+
         'message_warning_no_pdf' => 'Because of this warning no invoice PDF has been sent. You will have to do so manually.',
         'message_warning_old_entry_deleted' => 'The invoice has overwritten an older invoice for this %1$s in Acumulus. In Acumulus, this older invoice with entry = %2$d has been moved to the waste bin and can be found under "Views » Latest entries » Deleted entries".',
         'message_warning_old_entry_not_deleted' => 'The invoice has overwritten an older invoice for this %1$s in Acumulus. In Acumulus, we tried to move this older invoice to the waste bin but did not succeed probably because the older invoice has already been deleted. This older invoice with entry = %2$d may or may not still be found under "Views » Latest entries » Deleted entries".',
